webkit2gtk (2.6.0+dfsg1-3) UNRELEASED; urgency=medium

  * debian/patches/atomic_build_fix.patch:
    + Make -latomic work also when --as-needed is present.

 -- Alberto Garcia <berto@igalia.com>  Sun, 05 Oct 2014 20:59:21 +0300

webkit2gtk (2.6.0+dfsg1-2) unstable; urgency=medium

  [ Alberto Garcia ]
  * debian/patches/atomic_build_fix.patch:
    + Add -latomic also to shared libraries.

  [ Emilio Pozuelo Monfort ]
  * debian/rules:
    + Disable debugging symbols on powerpc. Should fix the build
      as otherwise the linker needs too much memory and fails.
    + Disable JIT on armel. Should fix the build.
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Thu, 02 Oct 2014 00:42:20 +0200

webkit2gtk (2.6.0+dfsg1-1) experimental; urgency=medium

  * New upstream release.
  * debian/patches/fix-textrel-x86.patch,
    debian/patches/change-libexec-dir.patch:
    + Remove.
  * debian/patches/dfg-jit.patch,
    debian/patches/install-minibrowser.patch,
    debian/patches/restore_sparc_code.patch:
    + Refresh.
  * debian/patches/atomic_build_fix.patch:
    + Add -latomic to fix build in some architectures.
  * debian/patches/css-image-set.patch:
    + Enable CSS_IMAGE_SET, required in order to display all inspector
      icons.
  * debian/rules:
    + Disable JIT completely in mips and mipsel, it does not build at the
      moment, see https://bugs.webkit.org/show_bug.cgi?id=136753.
    + Enable JIT in armel and armhf.
  * debian/copyright:
    + Update with all the changes in 2.6.0 (Closes: #760477).
  * debian/libwebkit2gtk-4.0-37.symbols:
    + Update.
  * Make gir1.2- and -dev packages multi-arch compliant:
    + debian/gir1.2-javascriptcoregtk-4.0.install,
      debian/gir1.2-webkit2-4.0.install:
      - Put .typelib files in /usr/lib/<arch>/girepository-1.0.
    + debian/control:
      - Add Multi-Arch field to the affected packages.
    + debian/gir1.2-javascriptcoregtk-4.0.links,
      debian/libjavascriptcoregtk-4.0-dev.links: